[gd_scene load_steps=4 format=3 uid="uid://bqpj3iu8pppdv"]

[ext_resource type="Script" path="res://Menu/GD_setting.gd" id="1_ypw4n"]
[ext_resource type="Texture2D" uid="uid://icgr7fdx45c7" path="res://Menu/Buttons/Controller_Pics/LT.png" id="2_ivnhq"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_we2is"]
load_path = "res://.godot/imported/1.png-fb39aaab63636554f89d02f1ca65b02f.ctex"

[node name="S_Setting" type="CanvasLayer"]
script = ExtResource("1_ypw4n")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0, 0, 0, 1)

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 25.0
offset_bottom = 51.0
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
text = "Setting
"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -204.0
offset_top = -118.0
offset_right = 204.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Keyboard" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Keyboard"

[node name="Controller" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Controller"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Input1" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/Input1"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move Up"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/Input1"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
icon = SubResource("CompressedTexture2D_we2is")
icon_alignment = 1
expand_icon = true

[node name="Input2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/Input2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move Down"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/Input2"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
icon_alignment = 1
expand_icon = true

[node name="Input3" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/Input3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move Left"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/Input3"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
icon_alignment = 1
expand_icon = true

[node name="Input4" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/Input4"]
layout_mode = 2
size_flags_horizontal = 3
text = "Move Right"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/Input4"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
icon_alignment = 1
expand_icon = true

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Input5" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/Input5"]
layout_mode = 2
size_flags_horizontal = 3
text = "Jump"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2/Input5"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
icon = ExtResource("2_ivnhq")
icon_alignment = 1
expand_icon = true

[node name="Input6" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/Input6"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dialogue"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2/Input6"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
icon_alignment = 1
expand_icon = true

[node name="Input7" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/Input7"]
layout_mode = 2
size_flags_horizontal = 3
text = "Wall Run"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2/Input7"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
icon_alignment = 1
expand_icon = true

[node name="Input8" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/Input8"]
layout_mode = 2
size_flags_horizontal = 3
text = "Attack"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2/Input8"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
icon_alignment = 1
expand_icon = true

[node name="Input9" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/Input9"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hook"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2/Input9"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
icon_alignment = 1
expand_icon = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Default"

[node name="Save" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
text = "Save"

[node name="Panel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -13.0
offset_right = 43.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Press a key"

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Keyboard" to="." method="_on_keyboard_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Controller" to="." method="_on_controller_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Input1/Button" to="." method="_on_button_Move_Up_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Input2/Button" to="." method="_on_button_Move_down_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Input3/Button" to="." method="_on_button_Move_Left_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Input4/Button" to="." method="_on_button_Move_Right_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/Input5/Button" to="." method="_on_button_Jump_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/Input6/Button" to="." method="_on_button_Dash_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/Input7/Button" to="." method="_on_button_Wall_Run_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/Input8/Button" to="." method="_on_button_Attack_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/Input9/Button" to="." method="_on_button_Block_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Button" to="." method="_on_button_default_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Save" to="." method="_on_back_pressed"]
